--- a/src/assets/scss/game.scss
+++ b/src/assets/scss/game.scss
@@ -12,6 +12,7 @@
 @import
 	'game/layout/loading',
 	'game/layout/menu',
+	'game/layout/side',
 	'game/layout/select',
 	'game/layout/battle',
 	'game/layout/training',
