--- a/src/assets/scss/game/layout/_battle.scss
+++ b/src/assets/scss/game/layout/_battle.scss
@@ -73,6 +73,7 @@
             text-align: center;
             border: 2px solid Black;
             margin: 5px 0;
+            position: relative;
         
             & > * {
                 width: 12px;
