--- a/src/assets/scss/game/layout/_select.scss
+++ b/src/assets/scss/game/layout/_select.scss
@@ -57,6 +57,7 @@
     /* Stage */
     .Select__Stages {
         order: 1;
+        height: 275px;
 
         .Menu__Layer {
             display: flex;
