--- a/src/assets/scss/game/layout/_settings.scss
+++ b/src/assets/scss/game/layout/_settings.scss
@@ -10,11 +10,11 @@
         font-size: 7em;
     }
     
-    .Settings__Players {
+    .Settings__Controllers {
         display: flex;
         justify-content: center;
     
-        .Settings__Player {
+        .Settings__Controller {
             flex: 1 1 400px;
             max-width: 400px;
             margin: 0 25px;
