--- a/src/assets/scss/game/layout/_side.scss
+++ b/src/assets/scss/game/layout/_side.scss
@@ -11,18 +11,11 @@
         margin: 0;
     }
 
-    &::after {
-        display: block;
-        content: '';
-        height: 132px;
-        width: auto;
-    }
-
     /* Player */
     .Side__Players {
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
         margin: 90px 0;
         
         & > * {
@@ -58,6 +51,8 @@
             order: 1;
             flex-direction: column;
             align-items: center;
+            justify-content: center;
+            height: 510px;
         }
     }
 }
