--- a/src/assets/scss/game/layout/_side.scss
+++ b/src/assets/scss/game/layout/_side.scss
@@ -16,7 +16,7 @@
         display: flex;
         justify-content: center;
         align-items: flex-start;
-        margin: 90px 0;
+        margin: 90px 0 0;
         
         & > * {
             display: flex;
@@ -52,7 +52,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 510px;
+            height: 508px;
         }
     }
 }
