--- a/src/assets/scss/game/layout/_training.scss
+++ b/src/assets/scss/game/layout/_training.scss
@@ -176,8 +176,8 @@
     }
     
     .Training__PositionBox > * {
-        border-color: Deepskyblue;
-        background-color: rgba(Deepskyblue, 0.25);
+        border-color: Black;
+        background-color: rgba(Black, 0.25);
     }
     
     .Training__HurtBox > * {
@@ -198,6 +198,13 @@
     .Training__HitBox > * {
         border-color: Red;
         background-color: rgba(Red, 0.25);
+    }
+}
+
+.Battle__Character {
+    .Training__PositionBox > * {
+        border-color: Deepskyblue;
+        background-color: rgba(Deepskyblue, 0.25);
     }
 }
 
