--- a/src/assets/scss/game.scss
+++ b/src/assets/scss/game.scss
@@ -11,6 +11,7 @@
 /* layout */
 @import
 	'game/layout/loading',
+	'game/layout/title',
 	'game/layout/menu',
 	'game/layout/side',
 	'game/layout/select',
