Gestion de l'AUDIO

--- a/src/assets/scss/game.scss
+++ b/src/assets/scss/game.scss
@@ -17,7 +17,8 @@
 	'game/layout/select',
 	'game/layout/battle',
 	'game/layout/training',
-	'game/layout/settings';
+	'game/layout/setting',
+	'game/layout/input';
 
 /* components */
 @import
