Ajout du choix du STAGE et du BGM Nouvelle logique de DIR pour les STAGES Modification du HELPER Ajout LISTENER pour ENGINE INPUT

--- a/src/assets/scss/game.scss
+++ b/src/assets/scss/game.scss
@@ -15,6 +15,7 @@
 	'game/layout/menu',
 	'game/layout/side',
 	'game/layout/select',
+	'game/layout/stage',
 	'game/layout/battle',
 	'game/layout/training',
 	'game/layout/setting',
