Ajout des EFFECTS Gestion des creations ENTITY et SOUND vai ENGINE BUG dans COMMAND LIST avec BACKTHROW

--- a/src/assets/scss/game/layout/_battle.scss
+++ b/src/assets/scss/game/layout/_battle.scss
@@ -361,3 +361,10 @@
         transform-origin: 100px 150px;
     }
 }
+
+.Battle__Effect {
+    width: 256px;
+    height: 256px;
+    transform-origin: 128px 190px;
+    z-index: 0;
+}
