BUG dans ENGINE Ajout animation d'OPENING

--- a/src/assets/scss/engine/components/_context.scss
+++ b/src/assets/scss/engine/components/_context.scss
@@ -10,4 +10,8 @@
     .outputViewport.--outputInitialize &.--outputCreated:not(.--outputUsed) {
         display: none !important;
     }
+
+	&:not(.--outputInitialize) {
+		z-index: -100;
+	}
 }	
