BOX pour coups sauté DEV pour FRAMES

--- a/src/assets/scss/game.scss
+++ b/src/assets/scss/game.scss
@@ -19,7 +19,9 @@
 	'game/layout/battle',
 	'game/layout/training',
 	'game/layout/setting',
-	'game/layout/input';
+	'game/layout/input',
+
+	'game/layout/dev';
 
 /* components */
 @import
