--- a/src/assets/scss/game/layout/_battle.scss
+++ b/src/assets/scss/game/layout/_battle.scss
@@ -36,7 +36,7 @@
     font-size: 2.4em;
     background-color: #333;
     color: #fff;
-    padding: 5px;
+    padding: 5px 5px 3px 8px;
     margin: 0 -25px -10px;
     z-index: 10;
     min-width: 60px;
@@ -125,7 +125,7 @@
                 background-color: #333;
                 color: #fff;
                 font-size: 2.4em;
-                padding: 5px 10px;
+                padding: 7px 7px 5px 10px;
                 position: absolute;
                 bottom: -2px;
                 right: 100%;
