--- a/src/assets/scss/game/layout/_battle.scss
+++ b/src/assets/scss/game/layout/_battle.scss
@@ -371,3 +371,34 @@
     transform-origin: 128px 210px;
     z-index: 20;
 }
+
+/* Menu */
+
+.Battle__Menu {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.25);
+
+    .--menu & {
+        display: flex;
+    }
+
+    & > * {
+        min-width: 300px;
+        background-color: White;
+        text-align: center;
+        border: 2px solid Black;
+        box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.25);
+
+        ul {
+            margin: 25px !important;
+        }
+    }
+}
