--- a/src/assets/scss/game/layout/_training.scss
+++ b/src/assets/scss/game/layout/_training.scss
@@ -19,36 +19,17 @@
 }
 
 // Menu
-.Training__Menu {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 1000;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.25);
-
-    .--menu & {
-        display: flex;
+.Battle__Menu {
+    
+    .--menu.--training & .Battle__Menu_Principal {
+        display: none;
     }
 
-    .Menu__Layer:not(.Training__Menu_List_Character) {
+    & > .Training__Menu {
         display: none;
-        min-width: 300px;
-        background-color: White;
-        text-align: center;
-        border: 2px solid Black;
-        box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.25);
 
         &.--show {
             display: block;
-        }
-
-        ul {
-            margin: 25px;
         }
     }
     
@@ -217,7 +198,7 @@
 .Training__Animation {
     position: absolute;
     left: 50px;
-    width: 400px;
+    width: 399px;
     line-height: 5px;
     display: none;
     text-align: left;
@@ -236,7 +217,7 @@
         display: inline-block;
         width: 4px;
         height: 4px;
-        margin: 1px;
+        margin: 1px 0 1px 1px;
         background-color: Lime;
         box-shadow: 0 0 0 1px Black;
 
