Gestion d'une LIST de commande commune

--- a/src/assets/scss/game/layout/_training.scss
+++ b/src/assets/scss/game/layout/_training.scss
@@ -94,10 +94,11 @@
 
     &_Command {
         min-width: 300px;
+    }
 
-        &.--cancel {
-            color: DarkGray;
-        }
+    .--cancel {
+        color: DarkGray;
+        font-size: 0.75em;
     }
 }
 
