Ajout du RECORD dans le DUMMY

--- a/src/assets/scss/game/layout/_training.scss
+++ b/src/assets/scss/game/layout/_training.scss
@@ -108,8 +108,8 @@
     top: 175px;
     bottom: 0;
     width: 175px;
-    flex-direction: column-reverse;
-    justify-content: flex-end;
+    flex-direction: column;
+    justify-content: flex-start;
     display: none;
 
     .--bHistory & {
