--- a/src/assets/scss/game/layout/_dev.scss
+++ b/src/assets/scss/game/layout/_dev.scss
@@ -2,13 +2,35 @@
 #CTX__Dev {
 	display: flex;
 
+    .--menu {
+        flex: 1 1 100%;
+
+        ul {
+            display: flex;
+            padding: 0;
+            margin: 10px 25px;
+
+            li {
+                display: block;
+                padding: 5px;
+                cursor: pointer;
+
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
+
     .--selected {
         color: red !important;
     }
 
     #LAY__Dev_Menu {
-        flex: 0 0 200px;
-        min-width: 200px;
+        flex: 0 0 250px;
+        min-width: 250px;
+        box-shadow: 11px 0 10px -10px rgba(0, 0, 0, 0.1);
+        position: relative;
 
         li {
             display: block;
@@ -22,43 +44,50 @@
         }
     }
 
-    #LAY__Dev_Content {
-        flex: 1 1 100%;
-        overflow-y: auto;
+    .Dev__Wrapper {
         height: 100%;
+        flex: 1 1 100%;
+        display: flex;
+        flex-direction: column;
+
+        .Dev__Menu {
+            font-size: 2em;
+            position: relative;
+            flex: 0 0 auto;
+            background-color: #fff;
+            box-shadow: 0 11px 10px -10px rgba(0, 0, 0, 0.1);
+        }
+    }
+
+    #LAY__Dev_Content {
+        overflow-y: auto;
+        background-color: #f7f7f7;
     }
 
     .Dev__Frame {
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
+        
         display: none;
 
         &.--show {
-            display: flex;
+            display: block;
         }
 
         .Dev__Frame_Colors {
+            position: fixed;
+            top: 8px;
+            right: 0;
+            z-index: 1000;
+        }
+
+        & > * {
+            flex-wrap: wrap;
+            align-items: center;
+            display: flex;
             flex: 1 1 100%;
-
-            ul {
-                display: flex;
-                padding: 0;
-
-                li {
-                    display: block;
-                    padding: 5px;
-                    cursor: pointer;
-
-                    &:hover {
-                        text-decoration: underline;
-                    }
-                }
-            }
         }
 
         .Dev__Frame_Entity {
-            margin: 25px;
+            margin: 10px;
             position: relative;
             width: 200px;
             height: 200px;
