--- a/src/assets/scss/game/layout/_title.scss
+++ b/src/assets/scss/game/layout/_title.scss
@@ -23,4 +23,14 @@
             display: block;
         }
     }
+
+    .Title__Information {
+        margin: 15px auto;
+        max-width: 500px;
+
+        p {
+            margin: 25px 0;
+            color: darkgray;
+        }
+    }
 }
