Gestion ALERT en cas de problème

--- a/src/assets/scss/game.scss
+++ b/src/assets/scss/game.scss
@@ -26,4 +26,5 @@
 /* components */
 @import
 	'game/components/menu',
-	'game/components/helper';
+	'game/components/helper',
+	'game/components/alert';
